--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 management.endpoints.web.exposure.include=*
-
+spring.main.lazy-initialization=true
 
 server.port= 8080
 server.error.include-stacktrace=always
