--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # = JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=warn
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
